# forward-resume-builder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  AUTHENTICATION_COMPLETE.md  BACKEND_AUTHENTICATION_TESTS.md  CORRECT_JSON_FORMATS.md  DATABASE_SETUP.md  Makefile  README.md  SKILLS_BUILDER_README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fly.toml  nixpacks.toml  package-lock.json  package.json  render.yaml  requirements.txt  start.sh  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  dependency-update.yml  docker-security-scan.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  performance-monitoring.yml  pr-checks.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  database.py  db_service.py  file_parser.py  gemini_service.py  groq_service.py  job_scraper.py  main.py  main_backup.py  models.py  openai_service.py  pyproject.toml  requirements-render.txt  requirements.txt  setup_db.py  templates_service.py  test_openrouter.py  test_serialization.py
backend/core/: config.py  error_handlers.py  exceptions.py
backend/routes/: auth.py  health.py  jobs.py  resumes.py  templates.py
backend/schemas/: requests.py  responses.py
backend/utils/: __init__.py  rate_limiter.py  redis_cache.py  redis_rate_limiter.py  validators.py
docs/: demo-guide.md
frontend/: .env.example  .firebaserc  .npmrc  .prettierignore  .vercelignore  Dockerfile  Dockerfile.dev  Dockerfile.test  index.html  nginx.conf  package-lock.json  package-railway.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/public/: cdn-config.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: auth.test.tsx  upload.test.tsx
frontend/src/components/: AutoSaveIndicator.tsx  CategorizedSkillsDisplay.tsx  CollaborativeEditing.tsx  CoverLetterPDF.tsx  (+31 more)
nginx/: nginx.conf
scripts/: deploy.sh  mongo-init.js  quick-deploy.sh  setup-dev.sh
(+57 files in other folders)
